primeros pasos blog

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script defer src="../listacompra/lista.js"></script>
+
     <style>
         .important {
             background-color: lightsalmon;
@@ -19,12 +19,20 @@
     </style>
 </head>
 <body>
-    <h1>Listas de la compra</h1>
-    <input type="text" id="input">
-    <button id="guardar">Guardar</button>
-    <ul id="lista">
+    <section id="seccion_lista">
+        <h1>Listas de la compra</h1>
+        <input type="text" id="input">
+        <button id="guardar">Guardar</button>
+        <ul id="lista">
+        </ul>
+    <script defer src="../listacompra/lista.js"></script>
+    </section>
+    <section id="seccion_blog">
+        <h1>Blog</h1>
+    </section>
 
-    </ul>
 
+
+    
 </body>
 </html>
