esqueleto html blog

--- a/index.html
+++ b/index.html
@@ -29,10 +29,27 @@
     </section>
     <section id="seccion_blog">
         <h1>Blog</h1>
+        <section id="blog_form_seccion">
+            <form action="" id="blog_form">
+                <fieldset>
+                    <legend>Crear un nuevo post</legend>
+                    <label for="titulo">Título</label>
+                    <input type="tex" id="titulo" name="titulo">
+                    <br>
+                    <label for="contenido">Contenido</label>
+                    <textarea name="contenido" id="contenido" cols="30" rows="10" placeholder="escribe algo..."></textarea>
+                    <br>
+                    <input type="submit" value="Crear">
+                </fieldset>
+            </form>
+        </section>
     </section>
-
-
-
-    
+    <section id="blog_seccion">
+        <h2>Post</h2>
+        <article>
+            <h3>Título del post</h3>
+            <p>wuyegdhjskafhdjs</p>
+        </article>
+    </section>
 </body>
 </html>
