--- a/index.html
+++ b/index.html
@@ -39,17 +39,15 @@
                     <label for="contenido">Contenido</label>
                     <textarea name="contenido" id="contenido" cols="30" rows="10" placeholder="escribe algo..."></textarea>
                     <br>
-                    <input type="submit" value="Crear">
+                    <input id="cargar" type="submit" value="Crear">
                 </fieldset>
             </form>
         </section>
     </section>
-    <section id="blog_seccion">
-        <h2>Post</h2>
+    <section id="blog_seccion"> 
         <article>
-            <h3>Título del post</h3>
-            <p>wuyegdhjskafhdjs</p>
         </article>
+        <script src="./blog.js"></script>
     </section>
 </body>
 </html>
