--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog & Lista</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <style>
@@ -45,9 +45,7 @@
         </section>
     </section>
     <section id="blog_seccion"> 
-        <article>
-        </article>
-        <script src="./blog.js"></script>
+        <script src="./blog.js"></script>   
     </section>
 </body>
 </html>
