--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog & Lista</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <style>
-        .important {
-            background-color: lightsalmon;
-        }
-
-        .fa{
-            color: red;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section id="seccion_lista">
@@ -28,7 +18,7 @@
     <script defer src="../listacompra/lista.js"></script>
     </section>
     <section id="seccion_blog">
-        <h1>Blog</h1>
+        <h1 class="titulo1">Blog</h1>
         <section id="blog_form_seccion">
             <form action="" id="blog_form">
                 <fieldset>
