--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <ul id="lista">
         </ul>
-    <script defer src="../listacompra/lista.js"></script>
+    <script src="../listacompra/lista.js"></script>
 </section>
 
     <section id="seccion_blog">
